crates/cadenza-compiler/test-data/semantics/variables-error-inner-binding-not-visible-outside.cdz
let outer =
    let inner = 10
    inner
inner